# fresco

./: .gitignore  CMakeLists.txt  HeaderFileBuilder.cpp  HeaderFileBuilder.h  HeaderFileWriter.cpp  HeaderFileWriter.h  README.md  build.sh  main.cpp
scripts/: update_templates.sh
src/: CFileBuilder.cpp  FileResourceCompiler.cpp  HeaderFileBuilder.cpp  HeaderFileBuilder.h  HeaderTemplate.h  Placeholders.h  SourceFileBuilder.cpp  SourceTemplate.cpp  Templates.h  main.cpp
src/headers/: CFileBuilder.h  FileResourceCompiler.h  HeaderFileBuilder.h  HeaderTemplate.h  SourceFileBuilder.h  Templates.h
templates/: HeaderTemplate.h  HeaderTemplate.txt  SourceTemplate.txt
